force-app/main/default/objects/Contact/fields/Basic_Service_EC__c.field-meta.xml
<CustomField>
    <fullName>Basic_Service_EC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basic Service (EC)</label>
    <type>Checkbox</type>
</CustomField>