force-app/main/default/objects/Contact/fields/Cost_management__c.field-meta.xml
<CustomField>
    <fullName>Cost_management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost management</label>
    <type>Checkbox</type>
</CustomField>