force-app/main/default/objects/Contact/fields/E_invoice__c.field-meta.xml
<CustomField>
    <fullName>E_invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-invoice</label>
    <type>Checkbox</type>
</CustomField>