force-app/main/default/objects/Contact/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <label>Employee Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>