force-app/main/default/objects/Contact/fields/Financial_service__c.field-meta.xml
<CustomField>
    <fullName>Financial_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial service</label>
    <type>Checkbox</type>
</CustomField>