force-app/main/default/objects/Contact/fields/Online_maintenance_booking__c.field-meta.xml
<CustomField>
    <fullName>Online_maintenance_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online maintenance booking</label>
    <type>Checkbox</type>
</CustomField>