force-app/main/default/objects/Contact/fields/UserDelete__c.field-meta.xml
<CustomField>
    <fullName>UserDelete__c</fullName>
    <description>Used for deactivating the user by batch class</description>
    <label>UserDelete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Six Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>