force-app/main/default/objects/Contact/fields/Vehicle_management__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle management</label>
    <type>Checkbox</type>
</CustomField>